# bibliomar-helper

./: .env.example  .gitignore  README.md  populate.db  populate_manticore.py  populate_meilisearch.py  pyproject.toml
bibliomar_helper/populate_manticore/: __init__.py  config.py  helper.py  model.py  populate.py
bibliomar_helper/populate_meili/: config.py  helper.py  model.py  populate.py
config/manticore/: manticore.conf
populate/: populate_dump.sh
